--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,48 +2,48 @@ name: Build, test, and publish Docker Images
 
 on:
   pull_request:
-    paths-ignore:
-      - "*.md"
-      - "LICENSE"
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - "*.md"
-      - "LICENSE"
+#     paths-ignore:
+#       - "*.md"
+#       - "LICENSE"
+#   push:
+#     branches:
+#       - main
+#     paths-ignore:
+#       - "*.md"
+#       - "LICENSE"
 
 jobs:
   build-test-publish:
     name: Build, test, and publish Docker Images
     runs-on: ubuntu-latest
-    if: >
-      !contains(github.event.head_commit.message, 'ci skip') &&
-      !contains(github.event.pull_request.title, 'ci skip')
-    steps:
-      - name: Clone Main Repo
-        uses: actions/checkout@v2
-        with:
-          path: main
+#     if: >
+#       !contains(github.event.head_commit.message, 'ci skip') &&
+#       !contains(github.event.pull_request.title, 'ci skip')
+#     steps:
+#       - name: Clone Main Repo
+#         uses: actions/checkout@v2
+#         with:
+#           path: main
 
-      - name: Set Up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
+#       - name: Set Up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.x
 
-      - name: Build Docker Image
-        run: make -C main build
+#       - name: Build Docker Image
+#         run: make -C main build
 
-      - name: Install Dev Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          make -C main test-env
+#       - name: Install Dev Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           make -C main test-env
 
-      - name: Test Docker Image
-        run: make -C main test
+#       - name: Test Docker Image
+#         run: make -C main test
 
-      - name: Publish Docker Image
-        if: github.ref == 'refs/heads/main'
-        run: >
-          make -C main push
-          DOCKERHUB_USERNAME="${{secrets.DOCKERHUB_USERNAME}}"
-          DOCKERHUB_PASSWORD="${{secrets.DOCKERHUB_PASSWORD}}"
+#       - name: Publish Docker Image
+#         if: github.ref == 'refs/heads/main'
+#         run: >
+#           make -C main push
+#           DOCKERHUB_USERNAME="${{secrets.DOCKERHUB_USERNAME}}"
+#           DOCKERHUB_PASSWORD="${{secrets.DOCKERHUB_PASSWORD}}"
