--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -1,6 +1,6 @@
 # Based on https://docs.github.com/en/actions/guides/publishing-docker-images
 
-name: Create & publish google-ddns Docker image to ghcr.io
+name: Create & publish Docker image to ghcr.io
 
 on:
   workflow_dispatch:
