--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         
-      - name: Set Up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
+#       - name: Set Up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.x
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -40,13 +40,13 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Install Dev Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          make -C main test-env
+#       - name: Install Dev Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           make -C main test-env
           
-      - name: Test Docker Image
-        run: make -C main test
+#       - name: Test Docker Image
+#         run: make -C main test
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
